Support editable faucet share percentages

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,5 @@ Web Application Requirements
 　・超過水量料：超過水量(㎥) × 15円/㎥
 　・合計（非課税）：基本料金 + 超過水量料
 ・土地に賦課面積が入力できること。初期値は地図上の面積として、それを手入力で修正できること。
+【追加要件4】
+・給水栓の「農家の利用割合」は、利用者が自由に編集できること。初期値は面積割合で計算されたもので、利用者が入力した値を保持できること。単位は%で、入力欄の隣に計算された値が表示されていること
